cargo-features = ["edition2021"]

[package]
name = "rkernel"
version = "0.1.0"
edition = "2021"

[package.metadata]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field = "0.10.1"
# panic-abort = "0.3.2"
# panic-halt = "0.2.0"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[[bin]]
name = "rkernel"

[profile.dev]
# panic = "abort"

[profile.release]
# panic = "abort"
codegen-units = 1
lto = true

